# octopus-cmake

./: pyproject.toml
docs/: conf.py  index.md
docs/how-to-use/: basic-usage.md  develop.md  index.md
docs/why-cmake/: easier-configuration.md  external-libs.md  faster-builds.md  index.md
